# mini-projects

./: CMakeLists.txt  README.md  testing.cpp
BankAccountSimulator/: README.md  bankAccountSimulator.cpp
Battleship/: README.md  battleship.cpp
DiceRollingSimulator/: README.md  diceRollingSimulator.cpp
MultiplicationTable/: README.md  multiplicationTable.cpp
RockPaperScissors/: README.md  rockPaperScissors.cpp
Simple Calculator/: README.md  simpleCalculator.cpp
Stopwatch/: README.md  stopwatch.cpp
StringAnalyzer/: README.md  stringAnalyzer.cpp
